Query Processor/sql.output
Grammar

    0 $accept: sql $end

    1 sql: sql_stmt ';'
    2    | %empty

    3 sql_stmt: update_stmt
    4         | select_stmt
    5         | drop_stmt
    6         | create_stmt
    7         | insert_stmt
    8         | delete_stmt
    9         | rename_stmt
   10         | alter_stmt
   11         | use_stmt
   12         | show_stmt

   13 drop_stmt: drop_k type_drop

   14 type_drop: database_k name
   15          | table_k name_list
   16          | index_k name on_k name
   17          | view_k name_list

   18 create_stmt: create_k type_create

   19 type_create: database_k name
   20            | table_k name '(' create_def_list ')'
   21            | index_k name on_k name '(' name_list ')'
   22            | view_k name col_list_chk as_k select_stmt

   23 create_def_list: create_def
   24                | create_def_list ',' create_def

   25 create_def: col_def
   26           | constraints

   27 constraints: primary_k key_k col_list_chk
   28            | index_k col_list_chk
   29            | unique_k col_list_chk
   30            | foreign_k key_k col_list_chk references_k name col_list_chk

   31 col_def: name data_type special_list1

   32 data_type: datatype_k
   33          | datatype_k '(' number ')'

   34 special_list1: special_list
   35              | %empty

   36 special_list: special_ele
   37             | special_list special_ele

   38 special_ele: not_k null_k
   39            | auto_k
   40            | primary_k key_k
   41            | unique_k
   42            | references_k name name

   43 rename_stmt: rename_k table_k rename_list

   44 rename_list: name to_k name
   45            | rename_list ',' name to_k name

   46 use_stmt: use_k name

   47 show_stmt: show_k type_show

   48 type_show: databases_k
   49          | tables_k opt_name
   50          | columns_k in_k name opt_name

   51 opt_name: in_k name
   52         | %empty

   53 insert_stmt: insert_k into_k name col_list_chk values_k val_set

   54 col_list_chk: '(' name_list ')'
   55             | %empty

   56 name_list: name
   57          | name_list ',' name

   58 val_set: val_list1
   59        | val_set ',' val_list1

   60 val_list1: '(' val_list ')'

   61 val_list: data
   62         | val_list ',' data

   63 data: '\'' name '\''
   64     | name
   65     | number
   66     | number '.' number

   67 delete_stmt: delete_k from_k name where_stmt orderby_stmt limit_stmt

   68 select_stmt: select_k select_col_chk from_k name where_stmt orderby_stmt limit_stmt

   69 select_col_chk: '*'
   70               | name_list

   71 where_stmt: where_k where_cond
   72           | %empty

   73 where_cond: exp

   74 exp: exp and_k exp
   75    | exp or_k exp
   76    | '(' exp ')'
   77    | cond_exp

   78 cond_exp: name '=' data
   79         | name '<' data
   80         | name '>' data
   81         | name '<' '=' data
   82         | name '>' '=' data
   83         | name '!' '=' data

   84 orderby_stmt: order_k by_k orderby_list
   85             | %empty

   86 orderby_list: name order_type
   87             | orderby_list ',' name order_type

   88 order_type: asc_k
   89           | dec_k

   90 update_stmt: update_k name set_k set_list where_stmt orderby_stmt limit_stmt

   91 set_list: set_single
   92         | set_list ',' set_single

   93 set_single: name '=' data

   94 limit_stmt: limit_k number
   95           | %empty

   96 alter_stmt: alter_k table_k name alter_spec_list

   97 alter_spec_list: alter_spec
   98                | alter_spec_list ',' alter_spec

   99 add_col_def: col_def
  100            | '(' col_def_list ')'

  101 col_def_list: col_def
  102             | col_def_list ',' col_def

  103 alter_spec: add_k add_col_def
  104           | add_k constraint_k constraints
  105           | change_k name col_def


Terminals, with rules where they appear

$end (0) 0
'!' (33) 83
'\'' (39) 63
'(' (40) 20 21 33 54 60 76 100
')' (41) 20 21 33 54 60 76 100
'*' (42) 69
',' (44) 24 45 57 59 62 87 92 98 102
'.' (46) 66
';' (59) 1
'<' (60) 79 81
'=' (61) 78 81 82 83 93
'>' (62) 80 82
error (256)
insert_k (258) 53
into_k (259) 53
values_k (260) 53
update_k (261) 90
set_k (262) 90
select_k (263) 68
from_k (264) 67 68
where_k (265) 71
order_k (266) 84
by_k (267) 84
and_k (268) 74
or_k (269) 75
asc_k (270) 88
dec_k (271) 89
delete_k (272) 67
not_k (273) 38
null_k (274) 38
primary_k (275) 27 40
key_k (276) 27 30 40
auto_k (277) 39
drop_k (278) 13
database_k (279) 14 19
table_k (280) 15 20 43 96
create_k (281) 18
rename_k (282) 43
alter_k (283) 96
add_k (284) 103 104
constraint_k (285) 104
limit_k (286) 94
use_k (287) 46
show_k (288) 47
databases_k (289) 48
tables_k (290) 49
columns_k (291) 50
index_k (292) 16 21 28
view_k (293) 17 22
unique_k (294) 29 41
foreign_k (295) 30
references_k (296) 30 42
on_k (297) 16 21
as_k (298) 22
to_k (299) 44 45
change_k (300) 105
in_k (301) 50 51
name (302) 14 16 19 20 21 22 30 31 42 44 45 46 50 51 53 56 57 63 64
    67 68 78 79 80 81 82 83 86 87 90 93 96 105
datatype_k (303) 32 33
number (304) 33 65 66 94


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
sql (62)
    on left: 1 2, on right: 0
sql_stmt (63)
    on left: 3 4 5 6 7 8 9 10 11 12, on right: 1
drop_stmt (64)
    on left: 13, on right: 5
type_drop (65)
    on left: 14 15 16 17, on right: 13
create_stmt (66)
    on left: 18, on right: 6
type_create (67)
    on left: 19 20 21 22, on right: 18
create_def_list (68)
    on left: 23 24, on right: 20 24
create_def (69)
    on left: 25 26, on right: 23 24
constraints (70)
    on left: 27 28 29 30, on right: 26 104
col_def (71)
    on left: 31, on right: 25 99 101 102 105
data_type (72)
    on left: 32 33, on right: 31
special_list1 (73)
    on left: 34 35, on right: 31
special_list (74)
    on left: 36 37, on right: 34 37
special_ele (75)
    on left: 38 39 40 41 42, on right: 36 37
rename_stmt (76)
    on left: 43, on right: 9
rename_list (77)
    on left: 44 45, on right: 43 45
use_stmt (78)
    on left: 46, on right: 11
show_stmt (79)
    on left: 47, on right: 12
type_show (80)
    on left: 48 49 50, on right: 47
opt_name (81)
    on left: 51 52, on right: 49 50
insert_stmt (82)
    on left: 53, on right: 7
col_list_chk (83)
    on left: 54 55, on right: 22 27 28 29 30 53
name_list (84)
    on left: 56 57, on right: 15 17 21 54 57 70
val_set (85)
    on left: 58 59, on right: 53 59
val_list1 (86)
    on left: 60, on right: 58 59
val_list (87)
    on left: 61 62, on right: 60 62
data (88)
    on left: 63 64 65 66, on right: 61 62 78 79 80 81 82 83 93
delete_stmt (89)
    on left: 67, on right: 8
select_stmt (90)
    on left: 68, on right: 4 22
select_col_chk (91)
    on left: 69 70, on right: 68
where_stmt (92)
    on left: 71 72, on right: 67 68 90
where_cond (93)
    on left: 73, on right: 71
exp (94)
    on left: 74 75 76 77, on right: 73 74 75 76
cond_exp (95)
    on left: 78 79 80 81 82 83, on right: 77
orderby_stmt (96)
    on left: 84 85, on right: 67 68 90
orderby_list (97)
    on left: 86 87, on right: 84 87
order_type (98)
    on left: 88 89, on right: 86 87
update_stmt (99)
    on left: 90, on right: 3
set_list (100)
    on left: 91 92, on right: 90 92
set_single (101)
    on left: 93, on right: 91 92
limit_stmt (102)
    on left: 94 95, on right: 67 68 90
alter_stmt (103)
    on left: 96, on right: 10
alter_spec_list (104)
    on left: 97 98, on right: 96 98
add_col_def (105)
    on left: 99 100, on right: 103
col_def_list (106)
    on left: 101 102, on right: 100 102
alter_spec (107)
    on left: 103 104 105, on right: 97 98


State 0

    0 $accept: . sql $end

    insert_k  shift, and go to state 1
    update_k  shift, and go to state 2
    select_k  shift, and go to state 3
    delete_k  shift, and go to state 4
    drop_k    shift, and go to state 5
    create_k  shift, and go to state 6
    rename_k  shift, and go to state 7
    alter_k   shift, and go to state 8
    use_k     shift, and go to state 9
    show_k    shift, and go to state 10

    $default  reduce using rule 2 (sql)

    sql          go to state 11
    sql_stmt     go to state 12
    drop_stmt    go to state 13
    create_stmt  go to state 14
    rename_stmt  go to state 15
    use_stmt     go to state 16
    show_stmt    go to state 17
    insert_stmt  go to state 18
    delete_stmt  go to state 19
    select_stmt  go to state 20
    update_stmt  go to state 21
    alter_stmt   go to state 22


State 1

   53 insert_stmt: insert_k . into_k name col_list_chk values_k val_set

    into_k  shift, and go to state 23


State 2

   90 update_stmt: update_k . name set_k set_list where_stmt orderby_stmt limit_stmt

    name  shift, and go to state 24


State 3

   68 select_stmt: select_k . select_col_chk from_k name where_stmt orderby_stmt limit_stmt

    name  shift, and go to state 25
    '*'   shift, and go to state 26

    name_list       go to state 27
    select_col_chk  go to state 28


State 4

   67 delete_stmt: delete_k . from_k name where_stmt orderby_stmt limit_stmt

    from_k  shift, and go to state 29


State 5

   13 drop_stmt: drop_k . type_drop

    database_k  shift, and go to state 30
    table_k     shift, and go to state 31
    index_k     shift, and go to state 32
    view_k      shift, and go to state 33

    type_drop  go to state 34


State 6

   18 create_stmt: create_k . type_create

    database_k  shift, and go to state 35
    table_k     shift, and go to state 36
    index_k     shift, and go to state 37
    view_k      shift, and go to state 38

    type_create  go to state 39


State 7

   43 rename_stmt: rename_k . table_k rename_list

    table_k  shift, and go to state 40


State 8

   96 alter_stmt: alter_k . table_k name alter_spec_list

    table_k  shift, and go to state 41


State 9

   46 use_stmt: use_k . name

    name  shift, and go to state 42


State 10

   47 show_stmt: show_k . type_show

    databases_k  shift, and go to state 43
    tables_k     shift, and go to state 44
    columns_k    shift, and go to state 45

    type_show  go to state 46


State 11

    0 $accept: sql . $end

    $end  shift, and go to state 47


State 12

    1 sql: sql_stmt . ';'

    ';'  shift, and go to state 48


State 13

    5 sql_stmt: drop_stmt .

    $default  reduce using rule 5 (sql_stmt)


State 14

    6 sql_stmt: create_stmt .

    $default  reduce using rule 6 (sql_stmt)


State 15

    9 sql_stmt: rename_stmt .

    $default  reduce using rule 9 (sql_stmt)


State 16

   11 sql_stmt: use_stmt .

    $default  reduce using rule 11 (sql_stmt)


State 17

   12 sql_stmt: show_stmt .

    $default  reduce using rule 12 (sql_stmt)


State 18

    7 sql_stmt: insert_stmt .

    $default  reduce using rule 7 (sql_stmt)


State 19

    8 sql_stmt: delete_stmt .

    $default  reduce using rule 8 (sql_stmt)


State 20

    4 sql_stmt: select_stmt .

    $default  reduce using rule 4 (sql_stmt)


State 21

    3 sql_stmt: update_stmt .

    $default  reduce using rule 3 (sql_stmt)


State 22

   10 sql_stmt: alter_stmt .

    $default  reduce using rule 10 (sql_stmt)


State 23

   53 insert_stmt: insert_k into_k . name col_list_chk values_k val_set

    name  shift, and go to state 49


State 24

   90 update_stmt: update_k name . set_k set_list where_stmt orderby_stmt limit_stmt

    set_k  shift, and go to state 50


State 25

   56 name_list: name .

    $default  reduce using rule 56 (name_list)


State 26

   69 select_col_chk: '*' .

    $default  reduce using rule 69 (select_col_chk)


State 27

   57 name_list: name_list . ',' name
   70 select_col_chk: name_list .

    ','  shift, and go to state 51

    $default  reduce using rule 70 (select_col_chk)


State 28

   68 select_stmt: select_k select_col_chk . from_k name where_stmt orderby_stmt limit_stmt

    from_k  shift, and go to state 52


State 29

   67 delete_stmt: delete_k from_k . name where_stmt orderby_stmt limit_stmt

    name  shift, and go to state 53


State 30

   14 type_drop: database_k . name

    name  shift, and go to state 54


State 31

   15 type_drop: table_k . name_list

    name  shift, and go to state 25

    name_list  go to state 55


State 32

   16 type_drop: index_k . name on_k name

    name  shift, and go to state 56


State 33

   17 type_drop: view_k . name_list

    name  shift, and go to state 25

    name_list  go to state 57


State 34

   13 drop_stmt: drop_k type_drop .

    $default  reduce using rule 13 (drop_stmt)


State 35

   19 type_create: database_k . name

    name  shift, and go to state 58


State 36

   20 type_create: table_k . name '(' create_def_list ')'

    name  shift, and go to state 59


State 37

   21 type_create: index_k . name on_k name '(' name_list ')'

    name  shift, and go to state 60


State 38

   22 type_create: view_k . name col_list_chk as_k select_stmt

    name  shift, and go to state 61


State 39

   18 create_stmt: create_k type_create .

    $default  reduce using rule 18 (create_stmt)


State 40

   43 rename_stmt: rename_k table_k . rename_list

    name  shift, and go to state 62

    rename_list  go to state 63


State 41

   96 alter_stmt: alter_k table_k . name alter_spec_list

    name  shift, and go to state 64


State 42

   46 use_stmt: use_k name .

    $default  reduce using rule 46 (use_stmt)


State 43

   48 type_show: databases_k .

    $default  reduce using rule 48 (type_show)


State 44

   49 type_show: tables_k . opt_name

    in_k  shift, and go to state 65

    $default  reduce using rule 52 (opt_name)

    opt_name  go to state 66


State 45

   50 type_show: columns_k . in_k name opt_name

    in_k  shift, and go to state 67


State 46

   47 show_stmt: show_k type_show .

    $default  reduce using rule 47 (show_stmt)


State 47

    0 $accept: sql $end .

    $default  accept


State 48

    1 sql: sql_stmt ';' .

    $default  reduce using rule 1 (sql)


State 49

   53 insert_stmt: insert_k into_k name . col_list_chk values_k val_set

    '('  shift, and go to state 68

    $default  reduce using rule 55 (col_list_chk)

    col_list_chk  go to state 69


State 50

   90 update_stmt: update_k name set_k . set_list where_stmt orderby_stmt limit_stmt

    name  shift, and go to state 70

    set_list    go to state 71
    set_single  go to state 72


State 51

   57 name_list: name_list ',' . name

    name  shift, and go to state 73


State 52

   68 select_stmt: select_k select_col_chk from_k . name where_stmt orderby_stmt limit_stmt

    name  shift, and go to state 74


State 53

   67 delete_stmt: delete_k from_k name . where_stmt orderby_stmt limit_stmt

    where_k  shift, and go to state 75

    $default  reduce using rule 72 (where_stmt)

    where_stmt  go to state 76


State 54

   14 type_drop: database_k name .

    $default  reduce using rule 14 (type_drop)


State 55

   15 type_drop: table_k name_list .
   57 name_list: name_list . ',' name

    ','  shift, and go to state 51

    $default  reduce using rule 15 (type_drop)


State 56

   16 type_drop: index_k name . on_k name

    on_k  shift, and go to state 77


State 57

   17 type_drop: view_k name_list .
   57 name_list: name_list . ',' name

    ','  shift, and go to state 51

    $default  reduce using rule 17 (type_drop)


State 58

   19 type_create: database_k name .

    $default  reduce using rule 19 (type_create)


State 59

   20 type_create: table_k name . '(' create_def_list ')'

    '('  shift, and go to state 78


State 60

   21 type_create: index_k name . on_k name '(' name_list ')'

    on_k  shift, and go to state 79


State 61

   22 type_create: view_k name . col_list_chk as_k select_stmt

    '('  shift, and go to state 68

    $default  reduce using rule 55 (col_list_chk)

    col_list_chk  go to state 80


State 62

   44 rename_list: name . to_k name

    to_k  shift, and go to state 81


State 63

   43 rename_stmt: rename_k table_k rename_list .
   45 rename_list: rename_list . ',' name to_k name

    ','  shift, and go to state 82

    $default  reduce using rule 43 (rename_stmt)


State 64

   96 alter_stmt: alter_k table_k name . alter_spec_list

    add_k     shift, and go to state 83
    change_k  shift, and go to state 84

    alter_spec_list  go to state 85
    alter_spec       go to state 86


State 65

   51 opt_name: in_k . name

    name  shift, and go to state 87


State 66

   49 type_show: tables_k opt_name .

    $default  reduce using rule 49 (type_show)


State 67

   50 type_show: columns_k in_k . name opt_name

    name  shift, and go to state 88


State 68

   54 col_list_chk: '(' . name_list ')'

    name  shift, and go to state 25

    name_list  go to state 89


State 69

   53 insert_stmt: insert_k into_k name col_list_chk . values_k val_set

    values_k  shift, and go to state 90


State 70

   93 set_single: name . '=' data

    '='  shift, and go to state 91


State 71

   90 update_stmt: update_k name set_k set_list . where_stmt orderby_stmt limit_stmt
   92 set_list: set_list . ',' set_single

    where_k  shift, and go to state 75
    ','      shift, and go to state 92

    $default  reduce using rule 72 (where_stmt)

    where_stmt  go to state 93


State 72

   91 set_list: set_single .

    $default  reduce using rule 91 (set_list)


State 73

   57 name_list: name_list ',' name .

    $default  reduce using rule 57 (name_list)


State 74

   68 select_stmt: select_k select_col_chk from_k name . where_stmt orderby_stmt limit_stmt

    where_k  shift, and go to state 75

    $default  reduce using rule 72 (where_stmt)

    where_stmt  go to state 94


State 75

   71 where_stmt: where_k . where_cond

    name  shift, and go to state 95
    '('   shift, and go to state 96

    where_cond  go to state 97
    exp         go to state 98
    cond_exp    go to state 99


State 76

   67 delete_stmt: delete_k from_k name where_stmt . orderby_stmt limit_stmt

    order_k  shift, and go to state 100

    $default  reduce using rule 85 (orderby_stmt)

    orderby_stmt  go to state 101


State 77

   16 type_drop: index_k name on_k . name

    name  shift, and go to state 102


State 78

   20 type_create: table_k name '(' . create_def_list ')'

    primary_k  shift, and go to state 103
    index_k    shift, and go to state 104
    unique_k   shift, and go to state 105
    foreign_k  shift, and go to state 106
    name       shift, and go to state 107

    create_def_list  go to state 108
    create_def       go to state 109
    constraints      go to state 110
    col_def          go to state 111


State 79

   21 type_create: index_k name on_k . name '(' name_list ')'

    name  shift, and go to state 112


State 80

   22 type_create: view_k name col_list_chk . as_k select_stmt

    as_k  shift, and go to state 113


State 81

   44 rename_list: name to_k . name

    name  shift, and go to state 114


State 82

   45 rename_list: rename_list ',' . name to_k name

    name  shift, and go to state 115


State 83

  103 alter_spec: add_k . add_col_def
  104           | add_k . constraint_k constraints

    constraint_k  shift, and go to state 116
    name          shift, and go to state 107
    '('           shift, and go to state 117

    col_def      go to state 118
    add_col_def  go to state 119


State 84

  105 alter_spec: change_k . name col_def

    name  shift, and go to state 120


State 85

   96 alter_stmt: alter_k table_k name alter_spec_list .
   98 alter_spec_list: alter_spec_list . ',' alter_spec

    ','  shift, and go to state 121

    $default  reduce using rule 96 (alter_stmt)


State 86

   97 alter_spec_list: alter_spec .

    $default  reduce using rule 97 (alter_spec_list)


State 87

   51 opt_name: in_k name .

    $default  reduce using rule 51 (opt_name)


State 88

   50 type_show: columns_k in_k name . opt_name

    in_k  shift, and go to state 65

    $default  reduce using rule 52 (opt_name)

    opt_name  go to state 122


State 89

   54 col_list_chk: '(' name_list . ')'
   57 name_list: name_list . ',' name

    ')'  shift, and go to state 123
    ','  shift, and go to state 51


State 90

   53 insert_stmt: insert_k into_k name col_list_chk values_k . val_set

    '('  shift, and go to state 124

    val_set    go to state 125
    val_list1  go to state 126


State 91

   93 set_single: name '=' . data

    name    shift, and go to state 127
    number  shift, and go to state 128
    '\''    shift, and go to state 129

    data  go to state 130


State 92

   92 set_list: set_list ',' . set_single

    name  shift, and go to state 70

    set_single  go to state 131


State 93

   90 update_stmt: update_k name set_k set_list where_stmt . orderby_stmt limit_stmt

    order_k  shift, and go to state 100

    $default  reduce using rule 85 (orderby_stmt)

    orderby_stmt  go to state 132


State 94

   68 select_stmt: select_k select_col_chk from_k name where_stmt . orderby_stmt limit_stmt

    order_k  shift, and go to state 100

    $default  reduce using rule 85 (orderby_stmt)

    orderby_stmt  go to state 133


State 95

   78 cond_exp: name . '=' data
   79         | name . '<' data
   80         | name . '>' data
   81         | name . '<' '=' data
   82         | name . '>' '=' data
   83         | name . '!' '=' data

    '='  shift, and go to state 134
    '<'  shift, and go to state 135
    '>'  shift, and go to state 136
    '!'  shift, and go to state 137


State 96

   76 exp: '(' . exp ')'

    name  shift, and go to state 95
    '('   shift, and go to state 96

    exp       go to state 138
    cond_exp  go to state 99


State 97

   71 where_stmt: where_k where_cond .

    $default  reduce using rule 71 (where_stmt)


State 98

   73 where_cond: exp .
   74 exp: exp . and_k exp
   75    | exp . or_k exp

    and_k  shift, and go to state 139
    or_k   shift, and go to state 140

    $default  reduce using rule 73 (where_cond)


State 99

   77 exp: cond_exp .

    $default  reduce using rule 77 (exp)


State 100

   84 orderby_stmt: order_k . by_k orderby_list

    by_k  shift, and go to state 141


State 101

   67 delete_stmt: delete_k from_k name where_stmt orderby_stmt . limit_stmt

    limit_k  shift, and go to state 142

    $default  reduce using rule 95 (limit_stmt)

    limit_stmt  go to state 143


State 102

   16 type_drop: index_k name on_k name .

    $default  reduce using rule 16 (type_drop)


State 103

   27 constraints: primary_k . key_k col_list_chk

    key_k  shift, and go to state 144


State 104

   28 constraints: index_k . col_list_chk

    '('  shift, and go to state 68

    $default  reduce using rule 55 (col_list_chk)

    col_list_chk  go to state 145


State 105

   29 constraints: unique_k . col_list_chk

    '('  shift, and go to state 68

    $default  reduce using rule 55 (col_list_chk)

    col_list_chk  go to state 146


State 106

   30 constraints: foreign_k . key_k col_list_chk references_k name col_list_chk

    key_k  shift, and go to state 147


State 107

   31 col_def: name . data_type special_list1

    datatype_k  shift, and go to state 148

    data_type  go to state 149


State 108

   20 type_create: table_k name '(' create_def_list . ')'
   24 create_def_list: create_def_list . ',' create_def

    ')'  shift, and go to state 150
    ','  shift, and go to state 151


State 109

   23 create_def_list: create_def .

    $default  reduce using rule 23 (create_def_list)


State 110

   26 create_def: constraints .

    $default  reduce using rule 26 (create_def)


State 111

   25 create_def: col_def .

    $default  reduce using rule 25 (create_def)


State 112

   21 type_create: index_k name on_k name . '(' name_list ')'

    '('  shift, and go to state 152


State 113

   22 type_create: view_k name col_list_chk as_k . select_stmt

    select_k  shift, and go to state 3

    select_stmt  go to state 153


State 114

   44 rename_list: name to_k name .

    $default  reduce using rule 44 (rename_list)


State 115

   45 rename_list: rename_list ',' name . to_k name

    to_k  shift, and go to state 154


State 116

  104 alter_spec: add_k constraint_k . constraints

    primary_k  shift, and go to state 103
    index_k    shift, and go to state 104
    unique_k   shift, and go to state 105
    foreign_k  shift, and go to state 106

    constraints  go to state 155


State 117

  100 add_col_def: '(' . col_def_list ')'

    name  shift, and go to state 107

    col_def       go to state 156
    col_def_list  go to state 157


State 118

   99 add_col_def: col_def .

    $default  reduce using rule 99 (add_col_def)


State 119

  103 alter_spec: add_k add_col_def .

    $default  reduce using rule 103 (alter_spec)


State 120

  105 alter_spec: change_k name . col_def

    name  shift, and go to state 107

    col_def  go to state 158


State 121

   98 alter_spec_list: alter_spec_list ',' . alter_spec

    add_k     shift, and go to state 83
    change_k  shift, and go to state 84

    alter_spec  go to state 159


State 122

   50 type_show: columns_k in_k name opt_name .

    $default  reduce using rule 50 (type_show)


State 123

   54 col_list_chk: '(' name_list ')' .

    $default  reduce using rule 54 (col_list_chk)


State 124

   60 val_list1: '(' . val_list ')'

    name    shift, and go to state 127
    number  shift, and go to state 128
    '\''    shift, and go to state 129

    val_list  go to state 160
    data      go to state 161


State 125

   53 insert_stmt: insert_k into_k name col_list_chk values_k val_set .
   59 val_set: val_set . ',' val_list1

    ','  shift, and go to state 162

    $default  reduce using rule 53 (insert_stmt)


State 126

   58 val_set: val_list1 .

    $default  reduce using rule 58 (val_set)


State 127

   64 data: name .

    $default  reduce using rule 64 (data)


State 128

   65 data: number .
   66     | number . '.' number

    '.'  shift, and go to state 163

    $default  reduce using rule 65 (data)


State 129

   63 data: '\'' . name '\''

    name  shift, and go to state 164


State 130

   93 set_single: name '=' data .

    $default  reduce using rule 93 (set_single)


State 131

   92 set_list: set_list ',' set_single .

    $default  reduce using rule 92 (set_list)


State 132

   90 update_stmt: update_k name set_k set_list where_stmt orderby_stmt . limit_stmt

    limit_k  shift, and go to state 142

    $default  reduce using rule 95 (limit_stmt)

    limit_stmt  go to state 165


State 133

   68 select_stmt: select_k select_col_chk from_k name where_stmt orderby_stmt . limit_stmt

    limit_k  shift, and go to state 142

    $default  reduce using rule 95 (limit_stmt)

    limit_stmt  go to state 166


State 134

   78 cond_exp: name '=' . data

    name    shift, and go to state 127
    number  shift, and go to state 128
    '\''    shift, and go to state 129

    data  go to state 167


State 135

   79 cond_exp: name '<' . data
   81         | name '<' . '=' data

    name    shift, and go to state 127
    number  shift, and go to state 128
    '\''    shift, and go to state 129
    '='     shift, and go to state 168

    data  go to state 169


State 136

   80 cond_exp: name '>' . data
   82         | name '>' . '=' data

    name    shift, and go to state 127
    number  shift, and go to state 128
    '\''    shift, and go to state 129
    '='     shift, and go to state 170

    data  go to state 171


State 137

   83 cond_exp: name '!' . '=' data

    '='  shift, and go to state 172


State 138

   74 exp: exp . and_k exp
   75    | exp . or_k exp
   76    | '(' exp . ')'

    and_k  shift, and go to state 139
    or_k   shift, and go to state 140
    ')'    shift, and go to state 173


State 139

   74 exp: exp and_k . exp

    name  shift, and go to state 95
    '('   shift, and go to state 96

    exp       go to state 174
    cond_exp  go to state 99


State 140

   75 exp: exp or_k . exp

    name  shift, and go to state 95
    '('   shift, and go to state 96

    exp       go to state 175
    cond_exp  go to state 99


State 141

   84 orderby_stmt: order_k by_k . orderby_list

    name  shift, and go to state 176

    orderby_list  go to state 177


State 142

   94 limit_stmt: limit_k . number

    number  shift, and go to state 178


State 143

   67 delete_stmt: delete_k from_k name where_stmt orderby_stmt limit_stmt .

    $default  reduce using rule 67 (delete_stmt)


State 144

   27 constraints: primary_k key_k . col_list_chk

    '('  shift, and go to state 68

    $default  reduce using rule 55 (col_list_chk)

    col_list_chk  go to state 179


State 145

   28 constraints: index_k col_list_chk .

    $default  reduce using rule 28 (constraints)


State 146

   29 constraints: unique_k col_list_chk .

    $default  reduce using rule 29 (constraints)


State 147

   30 constraints: foreign_k key_k . col_list_chk references_k name col_list_chk

    '('  shift, and go to state 68

    $default  reduce using rule 55 (col_list_chk)

    col_list_chk  go to state 180


State 148

   32 data_type: datatype_k .
   33          | datatype_k . '(' number ')'

    '('  shift, and go to state 181

    $default  reduce using rule 32 (data_type)


State 149

   31 col_def: name data_type . special_list1

    not_k         shift, and go to state 182
    primary_k     shift, and go to state 183
    auto_k        shift, and go to state 184
    unique_k      shift, and go to state 185
    references_k  shift, and go to state 186

    $default  reduce using rule 35 (special_list1)

    special_list1  go to state 187
    special_list   go to state 188
    special_ele    go to state 189


State 150

   20 type_create: table_k name '(' create_def_list ')' .

    $default  reduce using rule 20 (type_create)


State 151

   24 create_def_list: create_def_list ',' . create_def

    primary_k  shift, and go to state 103
    index_k    shift, and go to state 104
    unique_k   shift, and go to state 105
    foreign_k  shift, and go to state 106
    name       shift, and go to state 107

    create_def   go to state 190
    constraints  go to state 110
    col_def      go to state 111


State 152

   21 type_create: index_k name on_k name '(' . name_list ')'

    name  shift, and go to state 25

    name_list  go to state 191


State 153

   22 type_create: view_k name col_list_chk as_k select_stmt .

    $default  reduce using rule 22 (type_create)


State 154

   45 rename_list: rename_list ',' name to_k . name

    name  shift, and go to state 192


State 155

  104 alter_spec: add_k constraint_k constraints .

    $default  reduce using rule 104 (alter_spec)


State 156

  101 col_def_list: col_def .

    $default  reduce using rule 101 (col_def_list)


State 157

  100 add_col_def: '(' col_def_list . ')'
  102 col_def_list: col_def_list . ',' col_def

    ')'  shift, and go to state 193
    ','  shift, and go to state 194


State 158

  105 alter_spec: change_k name col_def .

    $default  reduce using rule 105 (alter_spec)


State 159

   98 alter_spec_list: alter_spec_list ',' alter_spec .

    $default  reduce using rule 98 (alter_spec_list)


State 160

   60 val_list1: '(' val_list . ')'
   62 val_list: val_list . ',' data

    ')'  shift, and go to state 195
    ','  shift, and go to state 196


State 161

   61 val_list: data .

    $default  reduce using rule 61 (val_list)


State 162

   59 val_set: val_set ',' . val_list1

    '('  shift, and go to state 124

    val_list1  go to state 197


State 163

   66 data: number '.' . number

    number  shift, and go to state 198


State 164

   63 data: '\'' name . '\''

    '\''  shift, and go to state 199


State 165

   90 update_stmt: update_k name set_k set_list where_stmt orderby_stmt limit_stmt .

    $default  reduce using rule 90 (update_stmt)


State 166

   68 select_stmt: select_k select_col_chk from_k name where_stmt orderby_stmt limit_stmt .

    $default  reduce using rule 68 (select_stmt)


State 167

   78 cond_exp: name '=' data .

    $default  reduce using rule 78 (cond_exp)


State 168

   81 cond_exp: name '<' '=' . data

    name    shift, and go to state 127
    number  shift, and go to state 128
    '\''    shift, and go to state 129

    data  go to state 200


State 169

   79 cond_exp: name '<' data .

    $default  reduce using rule 79 (cond_exp)


State 170

   82 cond_exp: name '>' '=' . data

    name    shift, and go to state 127
    number  shift, and go to state 128
    '\''    shift, and go to state 129

    data  go to state 201


State 171

   80 cond_exp: name '>' data .

    $default  reduce using rule 80 (cond_exp)


State 172

   83 cond_exp: name '!' '=' . data

    name    shift, and go to state 127
    number  shift, and go to state 128
    '\''    shift, and go to state 129

    data  go to state 202


State 173

   76 exp: '(' exp ')' .

    $default  reduce using rule 76 (exp)


State 174

   74 exp: exp . and_k exp
   74    | exp and_k exp .
   75    | exp . or_k exp

    or_k  shift, and go to state 140

    $default  reduce using rule 74 (exp)


State 175

   74 exp: exp . and_k exp
   75    | exp . or_k exp
   75    | exp or_k exp .

    $default  reduce using rule 75 (exp)


State 176

   86 orderby_list: name . order_type

    asc_k  shift, and go to state 203
    dec_k  shift, and go to state 204

    order_type  go to state 205


State 177

   84 orderby_stmt: order_k by_k orderby_list .
   87 orderby_list: orderby_list . ',' name order_type

    ','  shift, and go to state 206

    $default  reduce using rule 84 (orderby_stmt)


State 178

   94 limit_stmt: limit_k number .

    $default  reduce using rule 94 (limit_stmt)


State 179

   27 constraints: primary_k key_k col_list_chk .

    $default  reduce using rule 27 (constraints)


State 180

   30 constraints: foreign_k key_k col_list_chk . references_k name col_list_chk

    references_k  shift, and go to state 207


State 181

   33 data_type: datatype_k '(' . number ')'

    number  shift, and go to state 208


State 182

   38 special_ele: not_k . null_k

    null_k  shift, and go to state 209


State 183

   40 special_ele: primary_k . key_k

    key_k  shift, and go to state 210


State 184

   39 special_ele: auto_k .

    $default  reduce using rule 39 (special_ele)


State 185

   41 special_ele: unique_k .

    $default  reduce using rule 41 (special_ele)


State 186

   42 special_ele: references_k . name name

    name  shift, and go to state 211


State 187

   31 col_def: name data_type special_list1 .

    $default  reduce using rule 31 (col_def)


State 188

   34 special_list1: special_list .
   37 special_list: special_list . special_ele

    not_k         shift, and go to state 182
    primary_k     shift, and go to state 183
    auto_k        shift, and go to state 184
    unique_k      shift, and go to state 185
    references_k  shift, and go to state 186

    $default  reduce using rule 34 (special_list1)

    special_ele  go to state 212


State 189

   36 special_list: special_ele .

    $default  reduce using rule 36 (special_list)


State 190

   24 create_def_list: create_def_list ',' create_def .

    $default  reduce using rule 24 (create_def_list)


State 191

   21 type_create: index_k name on_k name '(' name_list . ')'
   57 name_list: name_list . ',' name
